Change Log:

7/23/2008 - 12:58 am - Sam (v 1.0.4)
Implemented parsing world file LOCATION and CONNECTIONS
Made change to Exit class -- it is now Connections and specific direction parameters are removed for more generic extension possiblity later.
Delete Room.java---finally

7/22/09 - 9:30 pm - Steven (v 1.0.3)
Shortened regex expressions
Starting player's location is initialized to the location
	with [start] tag (changed World File Descriptor)
Using theParty as static field rather than thePlayer
Status command prints out the status of whole party

7/22/09 - 4:00 am - Steven (v 1.0.2)
Changed Utility.print to Utility.println (better description)
Added Utility.print to print without terminating newline character
Fixed some warnings
Including a standard regex array to check world.txt with Utility.setupWorld

7/21/09 - 3:40 am - Derrick (v 1.0.1)
Added cute welcome sign.
Updated StandardPlayer to ask for name.
Commands can be read from prompt now.
New commands
	- try help
advworld.monsters has been updated with a MobNode